# pgtuner

./: .gitignore  CHANGELOG  Dockerfile  LICENSE  README.md  cicd_codegen_minifier.py  cleanup.py  codegen.py  css_minimizer.py  main.py  pgtuner_cli.py  pyproject.toml  requirements.bump.cli.txt  requirements.bump.web.txt  requirements.html.txt  requirements.txt  ui_deployment.py  vercel.json  web.py
.pgtuner_dba/suggestions/: database_config_20250119-135413.conf  database_config_20250429-100709.conf  database_config_20250429-101229.conf  database_config_20250503-120706.conf  database_config_20250510-183913.conf  database_config_20250511-155512.conf
.trunk/: trunk.yaml
conf/: gc.toml  log.toml  log_debug.toml  log_web.toml  pgtuner_dba.toml  web.dev.env  web.env  web.free.render.env  web.prod.env
conf/pgtuner_dba.d/: 00-pgtuner_disk.toml  01-pgtuner_mini.toml  02-pgtuner_medium.toml  03-pgtuner_large.toml  04-pgtuner_mall.toml  05-pgtuner_bigt.toml
docs/: changelog.min.html  error.min.html  index.html  tuner.min.html
docs/js/: codegen.min.js
frontend/: about-us.html  index.html
js/: codegen.js  test.js  tuner.js
js/codegen/: 00.js  01.js  02.js  03.js  04.js  06.js  07.js  08.js  09.js  10.js  11.js  12.js  13.js  19.js  20.js  21.js  22.js
js/tuner/data/: items.js  keywords.js  scope.js  sizing.js  workload.js
js/tuner/profile/: common.js
js/utils/: dict_deepmerge.js
js_src/: static.js
js_src/tuner/data/: workload.js
js_src/utils/: numeric.js
src/: __init__.py  _log_compressor.py  entry.py  log.py  pgtuner.py
src/static/: c_timezone.py  c_toml.py  vars.py
src/tuner/: base.py  pg_dataclass.py
src/tuner/data/: connection.py  disks.py  items.py  keywords.py  options.py  optmode.py  scope.py  sizing.py  utils.py  workload.py
src/tuner/profile/: common.py  gtune_13.py  gtune_14.py  gtune_15.py  gtune_16.py  gtune_17.py  gtune_README.md  gtune_common.py  gtune_common_db_config.py  gtune_common_kernel_sysctl.py  stune_db_config.py
src/utils/: avg.py  base.py  checksum.py  dict_deepmerge.py  env.py  io.py  log.py  mean.py  pydantic_utils.py  static.py  timing.py
ui/backend/js/: codegen.js  codegen.min.js  pgtuner.js  ui.js
ui/dev/jinja2/: changelog.html  changelog.min.html  head.html  head.min.html  header.html  header.min.html  tuner.html
ui/frontend/: changelog.min.html  error.min.html  index.html  tuner.min.html
web/: __init__.py  data.py  env.py
web-archived/: __init__.py
web/middlewares/: compressor.py  middlewares.py
(+178 files in other folders)
